--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
-    "react-router-dom": "^6.21.1"
+    "react-rating-stars-component": "^2.2.0",
+    "react-router-dom": "^6.21.1",
+    "swiper": "^11.0.5",
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
