--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-rating-stars-component": "^2.2.0",
+    "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
+    "react-spinners-kit": "^1.9.1",
     "swiper": "^11.0.5",
     "uniqid": "^5.4.0"
   },
